--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-amplify": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
