--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.1.3",
+    "babel": "^6.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.10.0",
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,6 +44,11 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.10.0"
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
+    "jest": "^27.5.1",
+    "react-router-dom": "^6.10.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
